change gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
         .vscode/
 	Code/C++Code/anagram_string
-	CodeC++Code/binary_search
-	CodeC++Code/class
-	CodeCodeC++Code/employee
-	CodeC++Code/loop
-	CodeC++Code/matrix
-	CodeC++Code/matrix_add
-	CodeC++Code/primefactor
-	CodeC++Code/primefactorization
-	CodeC++Code/template_find_max
-	CodeC++Code/template_struct
+	Code/C++Code/binary_search
+	Code/C++Code/class
+	Code/CodeC++Code/employee
+	Code/C++Code/loop
+	Code/++Code/matrix
+	Code/C++Code/matrix_add
+	Code/C++Code/primefactor
+	Code/C++Code/primefactorization
+	Code/C++Code/template_find_max
+	Code/C++Code/template_struct
