--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
         .vscode/
-	Code/C++Code/anagram_string
-	Code/C++Code/binary_search
-	Code/C++Code/class
-	Code/CodeC++Code/employee
-	Code/C++Code/loop
-	Code/++Code/matrix
-	Code/C++Code/matrix_add
-	Code/C++Code/primefactor
-	Code/C++Code/primefactorization
-	Code/C++Code/template_find_max
-	Code/C++Code/template_struct
+	!/C++Code/anagram_string
+	!/C++Code/binary_search
+	!/C++Code/class
+	!/CodeC++Code/employee
+	!/C++Code/loop
+	!/++Code/matrix
+	!/C++Code/matrix_add
+	!/C++Code/primefactor
+	!/C++Code/primefactorization
+	!/C++Code/template_find_max
+	!/C++Code/template_struct
